Refactored controller, introduced password encoder config and sample httpie requests